compiler/testData/diagnostics/tests/varargs/AmbiguousVararg.diag.txt
/AmbiguousVararg.kt:7:5: error: overload resolution ambiguity:
public fun foo(vararg t: String): String defined in root package in file AmbiguousVararg.kt
public fun foo(vararg t: Int): String defined in root package in file AmbiguousVararg.kt
    foo()
    ^^^
